manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
    ccm-smoke-test: 'nginx'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: smoke-test-pvc
          persistentVolumeClaim:
            claimName: smoke-test-pvc
      containers:
      - name: nginx
        image: bitnami/nginx
        ports:
        - containerPort: 80
        volumeMounts:
            - name: smoke-test-pvc
              mountPath: /app
